--- a/src/main/resources/web/index.html
+++ b/src/main/resources/web/index.html
@@ -222,7 +222,7 @@
             </td>
             <td>
                 <div ng-controller="createFolderController">
-                    <h3>Obtain token for userId (POST /folder)</h3>
+                    <h3>Create folder for user token (POST /folder)</h3>
 
                     <form>
                         Token: <input type="text" ng-model="params.token"><br/>
